--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@700&family=Lexend+Deca&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@100;200;300;400;500;600;700;800;900&family=Lexend+Deca:wght@100;200;300;400;500;600;700;800;900&display=swap");
 *,
 *:before,
 *:after {
@@ -37,7 +37,7 @@ a {
   background: #000;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: flex-start;
   justify-content: space-evenly;
   padding: 1rem 4rem;
   border-radius: 0.8rem;
@@ -55,6 +55,7 @@ a {
 
 .column-title {
   font-family: "Big Shoulders Display", cursive;
+  font-weight: bold;
   font-size: 4rem;
   color: #f2f2f2;
 }
